--- a/RecycleSort/package.json
+++ b/RecycleSort/package.json
@@ -8,15 +8,33 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "expo": "~36.0.0",
+    "prettier-eslint": "^9.0.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "expo-camera": "~8.0.0",
+    "expo-permissions": "~8.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
     "babel-preset-expo": "~8.0.0",
-    "@babel/core": "^7.0.0"
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-standard": "^4.0.1"
   },
-  "private": true
+  "private": true,
+  "prettier": {
+    "singleQuote": true,
+    "semi": true,
+    "jsxBracketSameLine": false,
+    "arrowParens": "always"
+  }
 }
