--- a/RecycleSort/package.json
+++ b/RecycleSort/package.json
@@ -11,13 +11,14 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "expo": "~36.0.0",
+    "expo-camera": "~8.0.0",
+    "expo-permissions": "~8.0.0",
     "prettier-eslint": "^9.0.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-web": "~0.11.7",
-    "expo-camera": "~8.0.0",
-    "expo-permissions": "~8.0.0"
+    "react-native-elements": "^1.2.7",
+    "react-native-web": "~0.11.7"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
