--- a/RecycleSort/package.json
+++ b/RecycleSort/package.json
@@ -8,6 +8,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "aws-amplify": "^2.2.6",
+    "aws-amplify-react-native": "^3.2.2",
+    "aws-sdk": "^2.619.0",
     "expo": "~36.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
